--- a/static/emails/email_confirmation.tmpl
+++ b/static/emails/email_confirmation.tmpl
@@ -1,7 +1,7 @@
 @{{.Name}} さん
 
 プロラボアカウントに紐づけられたメールアドレスを {{.Email}} に変更するには下記のURLにアクセスしてください。
-この操作に覚えがない場合は、このメールを無視してください。
+この操作に心当たりがない場合は、このメールを無視してください。
 
 {{.ConfirmationURL}}
 
